--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 9</title>
+    <title>Homework 12</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <ul>
-      <li><a href="./1-gallery.html">Gallery</a></li>
-      <li><a href="./2-form.html">Form</a></li>
-    </ul>
+    <section>
+      <form class="search-form">
+        <input
+          type="text"
+          class="search-input"
+          name="searchField"
+          placeholder="Search images..."
+          autocomplete="off"
+        />
+        <button type="submit" class="search-button">Search</button>
+      </form>
+    </section>
+    <section>
+      <ul class="gallery"></ul>
+      <button type="button" class="load-more-button visually-hidden">
+        Load More
+      </button>
+      <span class="loader visually-hidden"></span>
+    </section>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
